--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,3 +69,11 @@ button:focus-visible {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  background:url('/bg.png');
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+  /* background-attachment:fixed; */
+}
